--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["rsookram <rashadsookram@gmail.com>"]
 edition = "2018"
 description = "Command-line tool which displays a calendar"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 chrono = "0.4"
