Replace Structopt with gumdrop
for faster clean builds, less transitive dependencies and smaller
binaries.

On my machine, clean builds are ~2x as fast (for both debug and release
profiles) and the release binary is ~500 KB smaller.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 chrono = "0.4"
-structopt = { version = "0.3", default-features = false }
+gumdrop = "0.8"
 
 [profile.release]
 lto = true
