Replace gumdrop with pico-args
for faster clean builds, less transitive dependencies and smaller
binaries.

On my machine, clean builds are 2~3x as fast (for both debug and release
profiles) and the release binary is ~3 KB smaller.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["command-line-utilities"]
 
 [dependencies]
 chrono = "0.4"
-gumdrop = "0.8"
+pico-args = "0.3"
 
 [profile.release]
 lto = true
